# Deep-Trading

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  TODO.md  architecture.md  build.rs  foundry.toml  improvements.md  individual_rebalance.md  l2-predictions.csv  markets_data_l1.json  markets_data_l2.json  model.md  originality-predictions.csv  package-lock.json  portfolio.md  readme  weights_l1.csv.dev  weights_l2.csv.dev
contracts/: BatchRouter.sol  BatchSwapRouter.sol  FlashSwapRouter.sol  InOutRouter.sol  Rebalancer.sol  RebalancerAlgebra.sol  RebalancerMixed.sol  SolverQuoter.sol  TradeExecutor.sol
data/: l1-predictions.csv  markets_data_l1.json  markets_data_originality.json  movie_predictions.csv
docs/: README.md  TODO.md  arb_mode.md  architecture.md  batch_swap_router.md  batchrouter-uniswap-v3-fixture-tests.md  deployments.md  e2e_real_contracts_plan.md  ev_snapshot_regeneration.md  execution_program_packing.md  execution_submission.md  ff_benchmark_conservative_repricing_fix.md  ff_fee_estimator_post_landing_followups.md  ff_native_replay_latency_fix_plan.md  ff_replay_compile_latency_report.md  fix_stale_cost_accounting.md  forecastflows_fee_estimator_counter_plan.md  forecastflows_known_issues_pr_checklist.md  forecastflows_pathological_benchmarks.md  forecastflows_rust_solver_gap_analysis.md  forecastflows_rust_worker_integration_plan.md  forecastflows_worker.md  gas_model.md  global_solver.md  global_solver_WIP.md  global_solver_ev_progress_summary_2026-02-18.md  global_solver_ev_regression.md  global_solver_lbfgsb_phaseA_plan.md  gnosis_dry_run.md  (+41 more)
(+141 files in other folders)
