[package]
name = "deep_trading_bot"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
alloy = { version = "1.5.2", features = ["full"] }
alloy-primitives = "1.5.3"
alloy-sol-types = "1.5.3"
csv = "1.3"
dotenvy = "0.15.7"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniswap_v3_math = "0.6.2"

[dev-dependencies]
proptest = "1.6.0"
